--- a/パッチノート.md
+++ b/パッチノート.md
@@ -1,4 +1,12 @@
-v1.0.1パッチノート(2024/11/28)
+# パッチノート
+
+## v1.0.1(2024/11/28マージ予定)
+* 次の不具合を修正しました。
+  * 命中度による抵抗・ドラマ減少がダメージ処理後も継続する不具合
+  * 回避クリティカル・ファンブルの判定に命中判定のダイスロール結果が用いられていた不具合
+  * グレイズヒット・ライトヒット時に副攻を参照していた不具合
+
+## v1.0.1(2024/11/27マージ済)
 * 各判定のクリティカル・ファンブル処理に対応しました。
 * 20ターン終了時点で決着がつかない場合の勝敗判定を追加しました(ppp闘技場基準)。
 * 次の不具合を修正しました。
