--- a/パッチノート.md
+++ b/パッチノート.md
@@ -4,7 +4,9 @@
 * 次の不具合を修正しました。
   * 命中度による抵抗・ドラマ減少がダメージ処理後も継続する不具合
   * 回避クリティカル・ファンブルの判定に命中判定のダイスロール結果が用いられていた不具合
+    * あさがきらきらさんご報告ありがとうございます！
   * グレイズヒット・ライトヒット時に副攻を参照していた不具合
+    * あさがきらきらさんご報告ありがとうございます！
 
 ## v1.0.1(2024/11/27マージ済)
 * 各判定のクリティカル・ファンブル処理に対応しました。
