--- a/パッチノート.md
+++ b/パッチノート.md
@@ -1,7 +1,8 @@
 # パッチノート
 
-## v1.0.2(2024/11/28マージ予定)
+## v1.0.2(2024/11/29マージ済)
 
+* 通常攻撃の射程距離とレンジ補正、移動処理を実装しました。
 * 次の不具合を修正しました。
   * 命中度による抵抗・ドラマ減少がダメージ処理後も継続する不具合
   * 回避クリティカル・ファンブルの判定に命中判定のダイスロール結果が用いられていた不具合
